# py1phiPLL

./: CITATION.cff  CITATION.cff.txt  README.md  setup.cfg
doc/source/: conf.py  intro.rst
doc/source/originais/: index.rst  modules.rst
docs/source/: index.rst
examples/: EX_varPLL.py  SIMULATE_APF_SRF_PLL.py  SIMULATE_EPLL.py  SIMULATE_SOGI.py  SIMULATE_SOGI_FLL.py  SIMULATE_SOGI_SRF_PLL.py
src/py1phiPLL/: PLL.py  PLLs.py  definitions.py  varPLL.py
