[metadata]
name = pi1phiPLL
version = 1.0.0
author = Cleiton Magalhães Freitas
author_email = cleiton.freitas@uerj.br
description = A package containing python implementations of typical single-phase plls.
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/cleitoncmf/py1phiPLL
project_urls =
    Bug Tracker = https://github.com/cleitoncmf/py1phiPLL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9


install_requires=[
   'numpy'
]

[options.packages.find]
where = src